upgrade to next6.0

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,5 +1,6 @@
-@import 'bootstrap/dist/css/bootstrap.min';
-@import 'nprogress/nprogress';
+@import '~nprogress/nprogress';
+@import '~bootstrap/scss/bootstrap';
+
 @import 'theme';
 
 // components
